v2.8.2  Check for LINE_MAX, cygwin workaround (sf patch #125964, Jürgen)
v2.8.1	Install packer.h, php needs it, and address prototypes
v2.8	new package, auto'ified with libtool and numerous bug fixes, forked
	from original v2.7 distribution with the approval of the author
v2.7    mkdict/tr problem eliminated;
	misc fixes suggested by Andrey Savochkin <saw@msu.ru> (with thanks)
v2.6    buffer overflow problems addressed - 1st attempt
	permutations of fascist deconstructors fixed/enhanced
v2.5    added decent info to the "shadow" directory patches.
v2.4    forwarded to ch & jfh3 for beta testing/comments
v2.3-   internal beta test versions